# rustvfx

./: Cargo.toml  README.md
sketches/: noise.rs  noisesketch.rs  sketch.rs
src/: main.rs
